آدرس دهی به index.html تغییر پیدا کرد

--- a/signup.html
+++ b/signup.html
@@ -175,7 +175,7 @@
                 </div>
 
                 <div class="form-footer">
-                    <p>حساب کاربری دارید؟ <a href="login.html" class="signup-link" id="loginLink">وارد شوید</a></p>
+                    <p>حساب کاربری دارید؟ <a href="index.html" class="signup-link" id="loginLink">وارد شوید</a></p>
                 </div>
             </form>
 
